--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@babel/cli": "7.24.8",
     "@babel/core": "7.24.9",
     "@babel/preset-env": "7.24.8",
+    "@types/node": "20.14.10",
+    "@types/webpack": "5.28.5",
+    "@types/webpack-dev-server": "4.7.2",
     "core-js-pure": "3.37.1",
     "eslint": "9.7.0",
     "prettier": "3.3.3",
+    "ts-node": "10.9.2",
     "typescript": "5.5.3",
     "webpack": "5.93.0",
     "webpack-cli": "5.1.4"
