--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "core-js-pure": "3.37.1",
     "eslint": "9.7.0",
     "prettier": "3.3.3",
+    "ts-loader": "9.5.1",
     "ts-node": "10.9.2",
     "typescript": "5.5.3",
     "webpack": "5.93.0",
