--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "declaration": true,
-        "emitDeclarationOnly": true,
+        // "emitDeclarationOnly": true,
         "outDir": "dist",
+        "noEmit": false,
+        "noEmitOnError": true
     },
-    "include": ["**/*"],
+    "include": ["./src/**/*.ts"],
     "exclude": []
 }
