--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "20.14.10",
     "@types/webpack": "5.28.5",
     "@types/webpack-dev-server": "4.7.2",
+    "babel-loader": "9.1.3",
     "core-js-pure": "3.37.1",
     "eslint": "9.7.0",
     "prettier": "3.3.3",
