--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.common.ts"
+    "build": "webpack --config webpack.common.ts",
+    "clean": "rimraf dist"
   },
   "repository": {
     "type": "git",
@@ -33,6 +34,7 @@
     "core-js-pure": "3.37.1",
     "eslint": "9.7.0",
     "prettier": "3.3.3",
+    "rimraf": "6.0.1",
     "ts-loader": "9.5.1",
     "ts-node": "10.9.2",
     "typescript": "5.5.3",
